samples/_failures_safe/1761095887_b23102_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6321c6d2.c: In function ‘main’:
./samples/SAFE/__tmp_6321c6d2.c:117:26: error: missing terminating " character
  117 |     int cols1 = read_int("Enter columns for matrix A
      |                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_6321c6d2.c:117:5: error: expected expression at end of input
  117 |     int cols1 = read_int("Enter columns for matrix A
      |     ^~~
./samples/SAFE/__tmp_6321c6d2.c:117:17: error: too few arguments to function ‘read_int’
  117 |     int cols1 = read_int("Enter columns for matrix A
      |                 ^~~~~~~~
./samples/SAFE/__tmp_6321c6d2.c:83:5: note: declared here
   83 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_6321c6d2.c:117:5: error: expected declaration or statement at end of input
  117 |     int cols1 = read_int("Enter columns for matrix A
      |     ^~~
